[metadata]
name = ldappool
summary = A simple connector pool for python-ldap.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/ldappool
python-requires = >=3.8
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    ldappool

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  setup.py
  ldappool/tests/
